# Copyright 2025 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

add_subdirectory(fxcrt)
add_subdirectory(fdrm)
add_subdirectory(fxge)
add_subdirectory(fxcodec)
add_subdirectory(fpdfapi)
add_subdirectory(fpdfdoc)
add_subdirectory(fpdftext)
