# Copyright 2018 The PDFium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../pdfium.gni")

source_set("fdrm") {
  sources = [
    "fx_crypt.cpp",
    "fx_crypt.h",
    "fx_crypt_aes.cpp",
    "fx_crypt_aes.h",
    "fx_crypt_sha.cpp",
    "fx_crypt_sha.h",
  ]
  configs += [
    "../../:pdfium_strict_config",
    "../../:pdfium_noshorten_config",
  ]
  deps = [ "../fxcrt" ]
  visibility = [ "../../*" ]
}
